test/corpus/interface.txt
=====
empty
=====

interface A {

}

---

(program
    (interface_declaration (identifier))
)

================
with inheritance
================

interface A extends B, C {

}

---

(program
    (interface_declaration
        (identifier)
        (dotted_identifier (identifier))
        (dotted_identifier (identifier))
    )
)

===========
simple body
===========

interface A {
    function set helloWorld(): void;
}

---

(program
    (interface_declaration
        (identifier)
        (method_declaration 
            (accessor)
            (identifier)
            (type_hint (dotted_identifier (identifier)))
        )
    )
)

=============
with attribut
=============

public interface A {

}

---


(program
    (interface_declaration
        (interface_attribut)
        (identifier)
    )
)
